# tolk-proto

./: README.md  pyproject.toml  streamlit_app.py
app/: embed_knowledge.py  main.py  user_log_upload.py  utils.py
data/: knowledge_base.csv  user_logs.csv
